// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard page should execute getServerSideProps with de locale 1`] = `
{
  "props": {
    "data": {},
    "error": {
      "message": "",
    },
    "featureToggles": {
      "release_ib_enabled": true,
    },
    "innBusiness": undefined,
    "isError": false,
    "isInnBusinessAppPage": false,
    "isLoading": false,
  },
}
`;

exports[`Dashboard page should execute getServerSideProps with de locale 2`] = `
{
  "props": {
    "data": {},
    "error": {
      "message": "",
    },
    "featureToggles": {
      "release_ib_enabled": true,
    },
    "innBusiness": undefined,
    "isError": false,
    "isInnBusinessAppPage": false,
    "isLoading": false,
  },
}
`;

exports[`Dashboard page should execute getServerSideProps with gb locale 1`] = `
{
  "props": {
    "data": {},
    "error": {
      "message": "",
    },
    "featureToggles": {
      "release_ib_enabled": true,
    },
    "innBusiness": {
      "accounts": undefined,
      "cards": null,
      "companyDetails": null,
      "footer": null,
      "icons": null,
      "isAccountHolder": false,
      "isCardHolder": false,
      "labels": null,
      "language": "gb",
      "layout": null,
      "notifications": null,
      "searchRules": null,
      "spending": null,
      "userDetails": null,
      "users": null,
    },
    "isError": false,
    "isInnBusinessAppPage": true,
    "isLoading": false,
  },
}
`;

exports[`Dashboard page should execute getServerSideProps with gb locale 2`] = `
{
  "props": {
    "data": {},
    "error": {
      "message": "",
    },
    "featureToggles": {
      "release_ib_enabled": true,
    },
    "innBusiness": {
      "accounts": undefined,
      "cards": null,
      "companyDetails": null,
      "footer": null,
      "icons": null,
      "isAccountHolder": false,
      "isCardHolder": false,
      "labels": null,
      "language": "de",
      "layout": null,
      "notifications": null,
      "searchRules": null,
      "spending": null,
      "userDetails": null,
      "users": null,
    },
    "isError": false,
    "isInnBusinessAppPage": true,
    "isLoading": false,
  },
}
`;

exports[`Dashboard page should match the snapshot 1`] = `
<div>
  <div
    data-testid="DefaultLayout"
  >
    <div
      data-testid="ErrorBoundary"
    >
      <div
        data-testid="MockPage"
      />
    </div>
  </div>
</div>
`;

exports[`Dashboard page should match the snapshot 2`] = `
<div>
  <div
    data-testid="DefaultLayout"
  >
    <div
      data-testid="ErrorBoundary"
    >
      <div
        data-testid="MockPage"
      />
    </div>
  </div>
</div>
`;
